<resources>
    <string name="app_name">Articulos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_altas">Altas</string>
    <string name="menu_buscar">Buscar</string>
    <string name="menu_editar">Editar</string>
    <string name="menu_listado_activo">Listado Activo</string>
    <string name="menu_listado_inactivo">Listado Inactivoo</string>
    <string name="menu_informacion">Información</string>
    <string name="menu_articulo">Articulo</string>
    <string name="menu_creditos">Creditos</string>

    //Creditos
    <string name="version">Version 1.0</string>
    <string name="universidad">Instituto Tecnologico de Toluca</string>
    <string name="materia">Dispositivos Moviles</string>
    <string name="alumno">Dominguez Merino Joel</string>
    <string name="profesora">M.C Rocio Elizabeth Pulido Albar</string>
    <string name="app">Articulos</string>
    <string name="anio">Abril - 2021</string>

    //Buttons
    <string name="sClear">Limpiar</string>
    <string name="sAdd">Agregar</string>
    <string name="sModify">Actualizar</string>
    <string name="sCancel">Cancelar</string>

    //Hints
    <string name="Product_name">Nombre del Producto</string>
    <string name="Product_DateDue">Fecha de Caducidad</string>
    <string name="Product_Stock">Stock</string>
    <string name="Product_id">ID del Producto</string>
    <string name="search_id">ID a Buscar</string>
    <string name="img">Imagen Producto</string>
    <string name="todo">TODO</string>

</resources>