<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.articulos.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_altas"
        android:name="com.example.articulos.ui.altas.AltasFragment"
        android:label="@string/menu_altas"
        tools:layout="@layout/fragment_altas" />

    <fragment
        android:id="@+id/nav_buscar"
        android:name="com.example.articulos.ui.buscar.BuscarFragment"
        android:label="@string/menu_buscar"
        tools:layout="@layout/fragment_buscar" />

    <fragment
        android:id="@+id/nav_editar"
        android:name="com.example.articulos.ui.editar.EditarFragment"
        android:label="@string/menu_editar"
        tools:layout="@layout/editar_fragment" />
</navigation>