<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.altas.AltasFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_altas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/menu_altas"
                android:textSize="36sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/fa_imagen"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:contentDescription="@string/img"
                android:src="@drawable/camera" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/Product_name"
                android:textColorHint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fa_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="15dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/Product_DateDue"
                    android:textColorHint="@color/white">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fa_caducidad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/fa_calendario"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@drawable/calendario" />

            </LinearLayout>


            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/fa_categoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@android:color/transparent"
                android:backgroundTint="@color/white" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/fa_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@android:color/transparent"
                android:backgroundTint="@color/white" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/Product_Stock"
                android:textColorHint="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fa_stock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="15dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fa_btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:elevation="15dp"
                    android:layout_marginRight="10sp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/cVerde"
                    android:text="@string/sAdd"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fa_btnClear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:elevation="15dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/cRojo"
                    android:text="@string/sClear"/>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>