<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.editar.EditarFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15dp">

            <TextView
                android:id="@+id/textEditar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_editar"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="30sp"/>

            <ImageView
                android:id="@+id/fe_imagen"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:contentDescription="@string/img"
                android:src="@drawable/camera" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="15dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/Product_id"
                    android:textColorHint="@color/cHint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fe_idProducto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/fe_btnBuscar"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@drawable/search" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/Product_name"
                android:textColorHint="@color/cHint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fe_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="15dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/Product_DateDue"
                    android:textColorHint="@color/cHint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fe_caducidad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/fe_calendario"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@drawable/calendario" />

            </LinearLayout>


            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/fe_categoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@android:color/transparent"
                android:backgroundTint="@color/white" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/fe_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@android:color/transparent"
                android:backgroundTint="@color/white" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/Product_Stock"
                android:textColorHint="@color/cHint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fe_stock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="15dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fe_btnUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:elevation="15dp"
                    android:layout_marginRight="10sp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/cVerde"
                    android:text="@string/sModify"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fe_btnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:elevation="15dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/cRojo"
                    android:text="@string/sCancel"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>