<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.buscar.BuscarFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="15dp">

            <TextView
                android:id="@+id/textBuscar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_buscar"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="30sp"/>

            <ImageView
                android:id="@+id/fb_imagen"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:contentDescription="@string/img"
                android:src="@drawable/camera" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="15dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/Product_id"
                    app:counterTextColor="@color/teal_700"
                    android:textColorHint="@color/cHint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fb_idProducto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/fb_buscar"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@drawable/search" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/Product_name"
                android:textColorHint="@color/cHint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fb_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="15dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/Product_DateDue"
                    android:textColorHint="@color/cHint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fb_caducidad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:adjustViewBounds="true"
                    android:src="@drawable/calendario" />

            </LinearLayout>


            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/fb_categoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@android:color/transparent"
                android:backgroundTint="@color/white" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/fb_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@android:color/transparent"
                android:backgroundTint="@color/white" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:hint="@string/Product_Stock"
                android:textColorHint="@color/cHint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fb_stock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="15dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fa_btnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:elevation="15dp"
                    android:layout_weight="1"
                    android:layout_marginRight="10sp"
                    android:backgroundTint="@color/design_default_color_error"
                    android:text="@string/sCancel"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fa_btnUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:elevation="15dp"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/holo_green_dark"
                    android:text="@string/sModify"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>